--- a/gb/17/7/14/n9394437.md
+++ b/gb/17/7/14/n9394437.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wccaxy2110/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约长岛老厨师的故事</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-2-600x400.jpg" />
 <h6>图：罗西梅亚餐馆的外观。这是在网路上下载的，罗西梅亚餐馆现在的夜景，其主建筑物五十年来没有什么变动。左边烟囱下就是中国老厨师曾工作过的地点。（作者提供）
@@ -8,13 +8,13 @@
 <hr>
 <h2><span style="color: #000080;"><strong>前言</strong></span></h2>
 <p>自上世纪六十年代末，我肩扛行李，手中拎着大同电锅，随着台湾的留学人潮负笈新大陆以来，半个世纪已如飞而逝。花甲之年回忆往事，才了解在我懵懂无知的年代，帮我渡过难关的一些人不在少数（许多位都已作古），他（她）们的形影，一直萦绕在我脑海中，包括我的论文指导教授，一群早期的公司同事，一位候车亭里素昧平生的老护士，游乐场的管理员夫妇俩????嗯，想起来了，还有一位中国老厨师。</p>
-<figure id="attachment_9394769" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-9394769" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-1-450x246.jpg" alt="图：1968年的老朱与我。戴方帽子的那天，我们四个念电机系的桥牌搭子，在成功大学总图书馆前合影留念。﹝左起，张崇德，我，郭正幸，朱嗣海﹞，时为1968年。正幸已病故，崇德现在是台湾联电的副董事长，也是我大学时期的室友。嗣海与我则是在1971年在纽约长岛打工时为室友。（作者提供）" width="450" b="246" /><figcaption class="wp-caption-text">图：1968年的老朱与我。戴方帽子的那天，我们四个念电机系的桥牌搭子，在成功大学总图书馆前合影留念。﹝左起，张崇德，我，郭正幸，朱嗣海﹞，时为1968年。正幸已病故，崇德现在是台湾联电的副董事长，也是我大学时期的室友。嗣海与我则是在1971年在<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>长岛打工时为室友。（作者提供）</figcaption></figure>
-<p>这位中国老厨师，是我在<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>长岛极东端的渔港蒙托克镇﹝Montauk, Long Island, New York﹞上的一个名为罗西梅亚的西餐馆里﹝Ruschmeyer’s Hotel Restaurant &amp; Club﹞遇到的，时间点是1970年的六月下旬。</p>
+<figure id="attachment_9394769" aria-describedby="caption-attachment-9394769" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/xxc-1-450x246.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-9394769" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-1-450x246.jpg" alt="图：1968年的老朱与我。戴方帽子的那天，我们四个念电机系的桥牌搭子，在成功大学总图书馆前合影留念。﹝左起，张崇德，我，郭正幸，朱嗣海﹞，时为1968年。正幸已病故，崇德现在是台湾联电的副董事长，也是我大学时期的室友。嗣海与我则是在1971年在纽约长岛打工时为室友。（作者提供）" width="450" b="246" /></a><figcaption id="caption-attachment-9394769" class="wp-caption-text">图：1968年的老朱与我。戴方帽子的那天，我们四个念电机系的桥牌搭子，在成功大学总图书馆前合影留念。﹝左起，张崇德，我，郭正幸，朱嗣海﹞，时为1968年。正幸已病故，崇德现在是台湾联电的副董事长，也是我大学时期的室友。嗣海与我则是在1971年在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>长岛打工时为室友。（作者提供）</figcaption></figure>
+<p>这位中国老厨师，是我在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>长岛极东端的渔港蒙托克镇﹝Montauk, Long Island, New York﹞上的一个名为罗西梅亚的西餐馆里﹝Ruschmeyer’s Hotel Restaurant &amp; Club﹞遇到的，时间点是1970年的六月下旬。</p>
 <h2><span style="color: #000080;"><strong>与老厨师有缘</strong></span></h2>
 <p>用中国谚语“有缘千里来相会”来形容我与老厨师的相遇，是最恰当不过的，因为我是打一千多英哩外的密西西比州来到纽约打工的留学生。蒙托克镇也不是我最初预定的打工地点，五月中旬学期结束后，我坐了两整天的长途巴士，迢迢千里赶去纽约州，原先是想要在号称“大苹果”的纽约市里打工的，结果“阴错阳差”地在六月底“流落”到蒙托克镇。1970年是我一生中很关键的一年，在纽约大都会区的一些际遇，也是这辈子忘不掉的。</p>
 <p>蒙托克镇是纽约居民的渡假胜地，如果由纽约市乘坐长岛线火车﹝LIRR，也就是Long Island Railroad﹞东行，得经过大大小小的约二十个车站，当年的规矩好像是每个站无论大小都要停靠五分钟，所以这短短的约一百英哩，要走上近三小时。长岛线火车不是交通干线，乘客不太多，由曼哈顿的宾州车站出发，蒙托克镇是这火车线的终点站。每天开赴蒙托克镇只有一个往返的火车班次而已，原班火车在到达蒙托克镇，滞留两小时后会往回开。</p>
 <p>在蒙托克车站的“事求人”看板上，我见到一家名为罗西梅亚的西餐旅馆在征求一名“收碗盘兼清桌椅”﹝Busboy﹞的招贴，时薪七毛五，食宿全包，正合我意，在公用电话亭里拨通电话，与经理谈了不到两分钟，这位年近六旬，名叫杰若德?罗西梅亚﹝Gerald Ruschmeyer﹞的犹太裔老板就亲自开车来接我，原来餐旅馆就是以他的姓氏为招牌，主要是做旺季渡假客人的生意。</p>
-<figure id="attachment_9394791" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-9394791 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-2-450x338.jpg" alt="图：罗西梅亚餐馆的内景。现在罗西梅亚餐馆的内景，比起五十年前要“摩登”一点。墙上壁画区，原先挂着被制成标本的各种海鱼，有条剑鱼﹝Swordfish﹞至少有三英尺长，好几十磅重。（作者提供）" width="450" b="338" /><figcaption class="wp-caption-text">图：罗西梅亚餐馆的内景。现在罗西梅亚餐馆的内景，比起五十年前要“摩登”一点。墙上壁画区，原先挂着被制成标本的各种海鱼，有条剑鱼﹝Swordfish﹞至少有三英尺长，好几十磅重。（作者提供）</figcaption></figure>
+<figure id="attachment_9394791" aria-describedby="caption-attachment-9394791" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/xxc-2-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9394791 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-2-450x338.jpg" alt="图：罗西梅亚餐馆的内景。现在罗西梅亚餐馆的内景，比起五十年前要“摩登”一点。墙上壁画区，原先挂着被制成标本的各种海鱼，有条剑鱼﹝Swordfish﹞至少有三英尺长，好几十磅重。（作者提供）" width="450" b="338" /></a><figcaption id="caption-attachment-9394791" class="wp-caption-text">图：罗西梅亚餐馆的内景。现在罗西梅亚餐馆的内景，比起五十年前要“摩登”一点。墙上壁画区，原先挂着被制成标本的各种海鱼，有条剑鱼﹝Swordfish﹞至少有三英尺长，好几十磅重。（作者提供）</figcaption></figure>
 <p>其实这餐旅馆与蒙托克车站只有约五分钟车程而已，去餐旅馆的路上，杰若德和我闲聊起来：</p>
 <p>“你打那儿来的？”</p>
 <p>“我是台湾来的中国人，现在还是学生身份，但是有移民局的暑期打工许可证。”这已是我短短六周以来的第三份工作，早已习惯老板们都会盘根究底的搞清楚打工者的来龙去脉，所以一口气就先报清楚我的“底细”。</p>
@@ -42,7 +42,7 @@
 <p>第一次轮休时，我因为不是“有车阶级”，那儿都没去，就在厨房里与师傅混了一整天，也自告奋勇地做了一天打杂的菜台工。与师傅渐渐搞熟了后，只要是我的轮休日，都尽量留在厨房里帮忙，耳濡目染地也学会了他的一些烧烤“秘诀”，例如烤牛肉（Roast Beef）时，一整块肉一定先是烤成半生熟（Medium Rare）的，遇到有客人点中度熟﹝Medium﹞时，不必再加工，就在切好的牛肉上浇以咖啡色的汤汁，以掩盖住牛肉上的血水，如果有客人要点生牛肉﹝Rare﹞时怎么办呢？你猜对啦，就浇些绛色的汤汁冒充血水。只有在客人点熟牛肉（Well Done）时，才需要把切好的牛肉回炉烤个两分钟。建议各位看倌到西餐厅点烤牛肉时，就点半生熟（Medium Rare）吧，因为那才是鲜嫩的“原汁原味”。</p>
 <p>有时候烤牛肉卖不完，师傅会在厨房烤炉熄火后，把牛肉切丝配以洋葱炒它一盘，浇在一份事先准备好的蛋炒饭上，两人笑眯眯地在厨房对坐吃起宵夜来。师傅还有一道“私房菜”，是我俩的“下酒菜”，那就是“卤鸭翅膀”。</p>
 <p>“鸭翅膀”从何而来？原来餐厅的菜单上有一道“烤小鸭”，虽然我擅自把Roast Duckling直译为烤小鸭，其实那餐盘上的半只鸭子的尺寸，绝不下于你在中国城的烧腊店里看到的那些烧鸭。一客半只烤鸭的量是够大的，美国人“文雅地”用刀叉吃烤鸭，通常是切几块胸脯肉吃，那必须用手掰开来吃的鸭翼（包括中翼与翼尖）连碰都不碰，师傅注意及此，鸭子进烤箱之前，中翼与翼尖被他剁下，每隔几天就在冰箱里屯积了十几、二十个鸭翅膀，师傅做起卤味来可是得心应手的，以前他显然是独享，如今是与我分享。现在想着那“卤鸭翅膀”配上冰啤酒，加上劳累一天后，放松心绪享受美味的情景，即使半个世纪以后还让我有“飘飘然”之感呢！</p>
-<figure id="attachment_9394792" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-9394792 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-3-450x253.jpg" alt="图：罗西梅亚餐馆的外观。这是在网路上下载的，罗西梅亚餐馆现在的夜景，其主建筑物五十年来没有什么变动。左边烟囱下就是中国老厨师曾工作过的地点。（作者提供）" width="450" b="253" /><figcaption class="wp-caption-text">图：罗西梅亚餐馆的外观。这是在网路上下载的，罗西梅亚餐馆现在的夜景，其主建筑物五十年来没有什么变动。左边烟囱下就是中国老厨师曾工作过的地点。（作者提供）</figcaption></figure>
+<figure id="attachment_9394792" aria-describedby="caption-attachment-9394792" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/xxc-3-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9394792 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/07/xxc-3-450x253.jpg" alt="图：罗西梅亚餐馆的外观。这是在网路上下载的，罗西梅亚餐馆现在的夜景，其主建筑物五十年来没有什么变动。左边烟囱下就是中国老厨师曾工作过的地点。（作者提供）" width="450" b="253" /></a><figcaption id="caption-attachment-9394792" class="wp-caption-text">图：罗西梅亚餐馆的外观。这是在网路上下载的，罗西梅亚餐馆现在的夜景，其主建筑物五十年来没有什么变动。左边烟囱下就是中国老厨师曾工作过的地点。（作者提供）</figcaption></figure>
 <p>师傅除了经常用中式来照应我的三餐（有时候还加上宵夜）之外，还曾挺身而出为我争取权益，表现了“团结就是力量”的移民奋斗精神。且容我慢慢导入那让我四十多年来萦绕于怀的往事吧。</p>
 <h2><span style="color: #000080;"><strong>“师傅”的身世之谜</strong></span></h2>
 <p>老实说，我连师傅的姓氏都搞不清楚，那儿会知道他的身世，他又是如何来飘洋过海到新大陆来的？不过我确实知道他是上海人，是中共“建国”之前“坐船”来的，而且还是船上的厨师。他说全船只有他与另外一位厨房工作人员是华裔，其他全是美国人，他的英语就是在上船后才开始学的。他说他是合法来美国的，我猜想他可能是在一艘停靠在长江口的美国军舰上做过厨工，所以才在军舰返抵美国后，以军方雇员身份，落地成为合法居民。他也得意地主动透露，他的月薪是一千元支票﹝要扣税的﹞加上五百元现款﹝不扣税的﹞，包食宿，但是一年只有七个月的工作，其余寒季的五个月得回纽约市租间房栖身。算起来这万元年薪在上世纪六、七十年代是不错的，打个比方，我就读的密西西比州立大学，有博士学位的助教授（Assistant Professor），其年薪（分九个月付，暑假无薪）也不过万元出头而已。</p>
@@ -134,55 +134,54 @@
 <p>“这铁椅就是我赶双工时的中途休息站。”我告诉培德。</p>
 <p>缓缓地别过头，没让他觉察到我那润湿的双眼。</p>
 <p>嗯，这就是人生。看样子，我的暮年是注定要在回忆中渡过的。#</p>
-<p>【<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，2017年5月完稿于美国<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E.md#1">德州</a>】</p>
+<p>【<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，2017年5月完稿于美国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E.md#1">德州</a>】</p>
 <p>责任编辑：李元</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/8/2/n3932130.md#1">足球季话达拉斯牛仔队</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/2/19/n4643503.md#1">山居随笔：简介德州的“山丘之乡”</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/2/29/n4650871.md#1">老侨达城讲古－－习画记趣</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/4/15/n7556779.md#1">山居随笔：德州的野花季节</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/7/1/n8054290.md#1">勒克辛顿号航母和太平洋战争博物馆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/8/2/n3932130.md#1">足球季话达拉斯牛仔队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251380.md#1">一个焦黑十字架的故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/19/n4643503.md#1">山居随笔：简介德州的“山丘之乡”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/29/n4650871.md#1">老侨达城讲古－－习画记趣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/15/n7556779.md#1">山居随笔：德州的野花季节</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/1/n8054290.md#1">勒克辛顿号航母和太平洋战争博物馆</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998786.md#1">【新闻看点】自诩“大国担当”中共须答7问</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998644.md#1">【纪元播报】疫情压力测算 中共政权还能挺多久</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998726.md#1">疫情下粮食涨价 中共越辟谣民众越抢购</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995606.md#1">中国多地现抢米潮 当局“辟谣”难掩窘境</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11993872.md#1">【拍案惊奇】老任平安习总不妙？粮荒近逼全球</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11996094.md#1">疫情下导演李安身处纽约 重回家庭煮夫生活</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995498.md#1">美剧《女超人》女星染疫 自曝藉呼吸机呼吸</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11989588.md#1">吃肉强化免疫力 美专家4方法抵御病毒</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992849.md#1">无症状感染者传染力不低 如何预防沉默传播？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995936.md#1">纽约医师分享中共肺炎疗法 称0死亡0插管</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679393.md#1">【军事热点】美军主导联合军演 在南海轮番展开</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/14/n9394437.htm">纽约长岛老厨师的故事</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/14/n9394437.htm">纽约长岛老厨师的故事</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wccaxy2110/djy/blob/master/gb/17/7/14/n9394437.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/7/14/n9394437.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
